...
        Haptics.impactAsync(Haptics.ImpactFeedbackStyle.Soft);
      };
    }, [])
  );

  return (
    <View style={styles.screen} testID="onboarding-screen">
      <Hero />
      <Reanimated.View style={styles.body}>
        <Text style={styles.headline}>A GLOBAL WALLET FOR A GLOBAL MARKET</Text>
        <ChromaRing style={{alignSelf: "center",  marginTop: 40}} base={colors.ink} >
          <Pressable style={{ width: "100%", height: "100%", justifyContent: "center"}} onPress={() => handleSignIn(Platform.OS === "ios" ? "apple" : "google")} testID="get-started">
            <Text style={styles.ctaText}>{ Platform.OS === "android"? "SIGN IN WITH GOOGLE" : "SIGN IN WITH APPLE"}</Text>
          </Pressable>
        </ChromaRing>
      </Reanimated.View>
    </View>
  );
...
