...
        <View>
          <View style={{
            flex: 1,
            alignItems: "center",
            justifyContent: "center"
          }}>
            <Title>SUCCESS</Title>
          </View>
          <Button
            label="Done"
            onPress={() => {
              router.push("/(home)")
            }}  
...
